--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,98 +1,104 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <meta name="author" content="{{ site.author.name }}" />
 
   <title>{% if page.title %}{{ page.title }} | Ben Limmer{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta
+    name="description"
+    content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"
+  />
 
   <!-- start OpenGraph -->
-  <meta content="{{ site.title }}" property="og:site_name">
-  <meta content="{{ site.url }}/assets/gravatar.jpeg" property="og:image">
+  <meta content="{{ site.title }}" property="og:site_name" />
+  <meta content="{{ site.url }}/assets/gravatar.jpeg" property="og:image" />
   {% if page.title %}
-    <meta content="{{ page.title }}" property="og:title">
+  <meta content="{{ page.title }}" property="og:title" />
   {% else %}
-    <meta content="{{ site.title }}" property="og:title">
-  {% endif %}
-  {% if page.title %}
-    <meta content="article" property="og:type">
+  <meta content="{{ site.title }}" property="og:title" />
+  {% endif %} {% if page.title %}
+  <meta content="article" property="og:type" />
   {% else %}
-    <meta content="website" property="og:type">
-  {% endif %}
-  {% if page.description %}
-    <meta content="{{ page.description }}" property="og:description">
+  <meta content="website" property="og:type" />
+  {% endif %} {% if page.description %}
+  <meta content="{{ page.description }}" property="og:description" />
   {% else %}
-    <meta content="{{ site.description }}" property="og:description">
-  {% endif %}
-  {% if page.url %}
-    <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+  <meta content="{{ site.description }}" property="og:description" />
+  {% endif %} {% if page.url %}
+  <meta content="{{ site.url }}{{ page.url }}" property="og:url" />
   {% endif %}
   <!-- end OpenGraph -->
 
   <!-- start Twitter -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@l1m5">
-  <meta name="twitter:creator" content="@l1m5">
-  <meta name="twitter:image:src" content="{{ site.url }}/assets/gravatar.jpeg">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@l1m5" />
+  <meta name="twitter:creator" content="@l1m5" />
+  <meta name="twitter:image:src" content="{{ site.url }}/assets/gravatar.jpeg" />
   {% if page.title %}
-    <meta name="twitter:title" content="{{ page.title }}">
+  <meta name="twitter:title" content="{{ page.title }}" />
   {% else %}
-    <meta name="twitter:title" content="{{ site.title }}">
-  {% endif %}
-  {% if page.url %}
-    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
-  {% endif %}
-  {% if page.description %}
-    <meta name="twitter:description" content="{{ page.description }}">
+  <meta name="twitter:title" content="{{ site.title }}" />
+  {% endif %} {% if page.url %}
+  <meta name="twitter:url" content="{{ site.url }}{{ page.url }}" />
+  {% endif %} {% if page.description %}
+  <meta name="twitter:description" content="{{ page.description }}" />
   {% else %}
-    <meta name="twitter:description" content="{{ site.description }}">
+  <meta name="twitter:description" content="{{ site.description }}" />
   {% endif %}
   <!-- end Twitter -->
 
   {% if page.date %}
-    <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-    <meta content="{{ site.url }}/about/" property="article:author">
-  {% endif %}
-  {% if page.categories %}
-    {% for category in page.categories limit:1 %}
-    <meta content="{{ category }}" property="article:section">
-    {% endfor %}
-  {% endif %}
-  {% if page.tags %}
-    {% for tag in page.tags %}
-    <meta content="{{ tag }}" property="article:tag">
-    {% endfor %}
-  {% endif %}
+  <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time" />
+  <meta content="{{ site.url }}/about/" property="article:author" />
+  {% endif %} {% if page.categories %} {% for category in page.categories limit:1 %}
+  <meta content="{{ category }}" property="article:section" />
+  {% endfor %} {% endif %} {% if page.tags %} {% for tag in page.tags %}
+  <meta content="{{ tag }}" property="article:tag" />
+  {% endfor %} {% endif %}
 
-  <link rel="canonical" href="{{ site.production_url }}{{ page.url | replace:'index.html',''}}">
+  <link rel="canonical" href="{{ site.production_url }}{{ page.url | replace:'index.html',''}}" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.production_url }}/feed.xml" />
-  <link type="text/plain" rel="author" href="https://benlimmer.com/humans.txt" />
+  <link type="text/plain" rel="author" href="{{ site.base_url }}/humans.txt" />
   <link rel="shortcut icon" href="/assets/favicon.png" />
-  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootswatch/3.4.1/journal/bootstrap.min.css" />
+  <link
+    href="//stackpath.bootstrapcdn.com/bootswatch/4.4.1/journal/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-0d2eTc91EqtDkt3Y50+J9rW3tCXJWw6/lDgf1QNHLlV0fadTyvcA120WPsSOlwga"
+    crossorigin="anonymous"
+  />
   <link rel="stylesheet" href="{{ site.base_url }}/{% ministamp _css/custom.css css/custom.css %}" />
   <script src="{{ site.base_url }}/{% ministamp _js/require.js js/require.js %}"></script>
   <script>
-   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function(i, s, o, g, r, a, m) {
+      i["GoogleAnalyticsObject"] = r;
+      (i[r] =
+        i[r] ||
+        function() {
+          (i[r].q = i[r].q || []).push(arguments);
+        }),
+        (i[r].l = 1 * new Date());
+      (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m);
+    })(window, document, "script", "//www.google-analytics.com/analytics.js", "ga");
 
-   ga('create', 'UA-43746905-1', 'benlimmer.com');
-   ga('require', 'displayfeatures');
-   ga('send', 'pageview');
- </script>
- <script>
-  requirejs.config({
-    shim : {
-      "bootstrap" : { "deps" :['jquery'] }
-    },
-    paths: {
-      "jquery" : "//code.jquery.com/jquery-3.4.1.slim.min",
-      "bootstrap" :  "//stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min"
-    }
-  });
-  require(["jquery", "bootstrap"]);
-</script>
+    ga("create", "UA-43746905-1", "benlimmer.com");
+    ga("require", "displayfeatures");
+    ga("send", "pageview");
+  </script>
+  <script>
+    requirejs.config({
+      shim: {
+        bootstrap: { deps: ["jquery"] }
+      },
+      paths: {
+        jquery: "//code.jquery.com/jquery-3.4.1.slim.min",
+        bootstrap: "//stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min"
+      }
+    });
+    require(["jquery", "bootstrap"]);
+  </script>
 </head>
