--- a/_includes/consulting/specialties_accordian.html
+++ b/_includes/consulting/specialties_accordian.html
@@ -26,7 +26,7 @@
 
   <details>
     <summary>
-      <h3>Front-End Development</h3>
+      <h3>Front&ndash;End Development</h3>
     </summary>
     <ul>
       <li>Browser Extensions</li>
@@ -39,7 +39,7 @@
 
   <details>
     <summary>
-      <h3>Back-End Development</h3>
+      <h3>Back&ndash;End Development</h3>
     </summary>
     <ul>
       <li>Node apps</li>
