--- a/_includes/consulting/specialties_accordian.html
+++ b/_includes/consulting/specialties_accordian.html
@@ -1,4 +1,4 @@
-<section id="specialties-accordian">
+<section class="consulting-accordian">
   <details>
     <summary>
       <h3>Developer Tooling and Experience</h3>
