--- a/_includes/consulting/availability_accordian.html
+++ b/_includes/consulting/availability_accordian.html
@@ -3,7 +3,7 @@
     <summary>
       <h3>2020 Availability</h3>
     </summary>
-    <div class="row ml-2">
+    <div class="row ml-2 mt-2">
       <div class="col-2">January 2020</div>
       <div class="col-1"></div>
       <div class="col">
