--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
   {% include head.html %}
 
   <body>
-
     <div class="site" itemscope itemtype="http://schema.org/Blog">
       {% include header.html %}
 
       <div class="page-content">
         <div class="container">
-          {{ content }}
+          {% if page.url != "/consulting/" %}
+          <div class="alert alert-info mb-4" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h2 class="alert-heading">Consulting</h2>
+            I'm currently accepting new contracts for 2020. Find out more
+            <a class="alert-link" href="/consulting">here</a>.
+          </div>
+          {% endif %} {{ content }}
         </div>
       </div>
 
       {% include footer.html %}
     </div>
   </body>
-
 </html>
