--- a/_includes/consulting/availability_accordian.html
+++ b/_includes/consulting/availability_accordian.html
@@ -7,16 +7,8 @@
       <div class="col-2">January 2020</div>
       <div class="col-1"></div>
       <div class="col">
-        <div
-          class="progress-bar"
-          role="progressbar"
-          style="width: 100%; height: 100%"
-          aria-valuenow="100"
-          aria-valuemin="0"
-          aria-valuemax="100"
-        >
-          100% committed
-        </div>
+        {% octicon x height: 24 %}
+        <span class="text-danger">No Availability</span>
       </div>
     </div>
 
@@ -24,16 +16,8 @@
       <div class="col-2">February 2020</div>
       <div class="col-1"></div>
       <div class="col">
-        <div
-          class="progress-bar bg-info"
-          role="progressbar"
-          style="width: 50%; height: 100%"
-          aria-valuenow="50"
-          aria-valuemin="0"
-          aria-valuemax="100"
-        >
-          50% committed
-        </div>
+        {% octicon check height: 24 %}
+        <span class="text-success">Available</span>
       </div>
     </div>
 
@@ -41,16 +25,8 @@
       <div class="col-2">March 2020</div>
       <div class="col-1"></div>
       <div class="col">
-        <div
-          class="progress-bar bg-success"
-          role="progressbar"
-          style="width: 10%; height: 100%"
-          aria-valuenow="10"
-          aria-valuemin="0"
-          aria-valuemax="100"
-        >
-          10%
-        </div>
+        {% octicon check height:24 %}
+        <span class="text-success">Available</span>
       </div>
     </div>
 
@@ -58,16 +34,8 @@
       <div class="col-2">April 2020</div>
       <div class="col-1"></div>
       <div class="col">
-        <div
-          class="progress-bar bg-success"
-          role="progressbar"
-          style="width: 10%; height: 100%"
-          aria-valuenow="10"
-          aria-valuemin="0"
-          aria-valuemax="100"
-        >
-          10%
-        </div>
+        {% octicon check height:24 %}
+        <span class="text-success">Available</span>
       </div>
     </div>
 
@@ -75,16 +43,8 @@
       <div class="col-2">May 2020</div>
       <div class="col-1"></div>
       <div class="col">
-        <div
-          class="progress-bar bg-success"
-          role="progressbar"
-          style="width: 10%; height: 100%"
-          aria-valuenow="10"
-          aria-valuemin="0"
-          aria-valuemax="100"
-        >
-          10%
-        </div>
+        {% octicon check height:24 %}
+        <span class="text-success">Available</span>
       </div>
     </div>
 
@@ -92,16 +52,8 @@
       <div class="col-2">June 2020</div>
       <div class="col-1"></div>
       <div class="col">
-        <div
-          class="progress-bar"
-          role="progressbar"
-          style="width: 95%; height: 100%"
-          aria-valuenow="95"
-          aria-valuemin="0"
-          aria-valuemax="100"
-        >
-          95% committed
-        </div>
+        {% octicon x height:24 %}
+        <span class="text-danger">No Availability</span>
       </div>
     </div>
 
@@ -109,16 +61,8 @@
       <div class="col-2">July 2020</div>
       <div class="col-1"></div>
       <div class="col">
-        <div
-          class="progress-bar"
-          role="progressbar"
-          style="width: 95%; height: 100%"
-          aria-valuenow="95"
-          aria-valuemin="0"
-          aria-valuemax="100"
-        >
-          95% committed
-        </div>
+        {% octicon x height:24 %}
+        <span class="text-danger">No Availability</span>
       </div>
     </div>
   </details>
