--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
         <li class="nav-item {% if current[1] == 'archive' or page.is_post %}active{% endif %}">
           <a class="nav-link" href="/archive">BLOG</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown {% if page.is_about %}active{% endif %}">
           <a
             class="nav-link dropdown-toggle"
             href="#"
