--- a/_css/custom.css
+++ b/_css/custom.css
@@ -160,28 +160,28 @@ footer hr {
   background-color: gray;
 }
 
-.consulting-accordian {
+.accordian {
   margin: 1rem;
 }
 
-.consulting-accordian details {
+.accordian details {
   margin: 0.1rem 0;
 }
 
-.consulting-accordian details svg.octicon {
+.accordian details svg.octicon {
   margin-top: -4px;
   margin-right: 0.5rem;
 }
 
-.consulting-accordian details ul {
+.accordian details ul {
   margin-top: 0.5rem;
 }
 
-.consulting-accordian details .row:not(:first-of-type) {
+.accordian details .row:not(:first-of-type) {
   margin-top: 1rem;
 }
 
-.consulting-accordian details summary h3 {
+.accordian details summary h3 {
   display: inline-block;
 }
 
