--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,12 @@
 ---
 layout: default
 ---
-<div class="post">
-<h1>{{ page.title }}</h1>
-<article>
-  {{ content }}
-</article>
+<div class="row">
+  <div class="post col-8">
+    <h1>{{ page.title }}</h1>
+    <article>
+      {{ content }}
+    </article>
+    </div>
+  </div>
 </div>
