--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,48 +1,50 @@
 ---
 layout: default
 ---
-<div class="post" itemscope itemType="http://schema.org/BlogPosting">
-  <meta itemprop="inLanguage" content="en-US"/>
-  <h1 class="headline" itemprop="headline">{{ page.title }}</h1>
-  <p class="meta">
-    Posted on <span itemprop="datePublished" content={{ page.date | date_to_xmlschema }}> {{ page.date | date_to_long_string }}<span> by <span itemprop="author">{{ site.author.name }}</span>
-    <span class='little-face' itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
-      <img itemprop="url"  src='{{site.url}}/assets/gravatar.jpeg' style='width: 20px;' alt="avatar image of Ben Limmer" />
-      <meta itemprop="height" content="512" />
-      <meta itemprop="width" content="512" />
-    </span><br/>
-    {% if page.location %}{{ page.location }}{% endif %}
-  </p>
-  <article itemprop="articleBody">
-    {{ content }}
-  </article>
-
-  <div class="related">
-    <h5>Keywords</h5>
+<div class="row">
+  <div class="post col-8" itemscope itemType="http://schema.org/BlogPosting">
+    <meta itemprop="inLanguage" content="en-US"/>
+    <h1 class="headline" itemprop="headline">{{ page.title }}</h1>
     <p class="meta">
-      {{ page.tags | array_to_sentence_string }}
+      Posted on <span itemprop="datePublished" content={{ page.date | date_to_xmlschema }}> {{ page.date | date_to_long_string }}<span> by <span itemprop="author">{{ site.author.name }}</span>
+      <span class='little-face' itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
+        <img itemprop="url"  src='{{site.url}}/assets/gravatar.jpeg' style='width: 20px;' alt="avatar image of Ben Limmer" />
+        <meta itemprop="height" content="512" />
+        <meta itemprop="width" content="512" />
+      </span><br/>
+      {% if page.location %}{{ page.location }}{% endif %}
     </p>
-  </div>
+    <article itemprop="articleBody">
+      {{ content }}
+    </article>
 
-  <div class="report-bugs">
-    <h5>Find an issue?</h5>
-    Open a pull request against my blog
-    <a href='https://github.com/blimmer/benlimmer.com' target='_blank' rel="noopener">on GitHub</a>.
-  </div>
-
-  <div class="pagination justify-content-between">
-    {% if page.previous %}<span><a href={{page.previous.url}}>&lt; Previous Post</a></span>{% endif %}
-    {% if page.next %}<span><a href={{page.next.url}}>Next Post &gt;</a></span>{% endif %}
-  </div>
-
-  <div itemprop='publisher' itemscope='itemscope' itemtype='https://schema.org/Organization' style='display:none;'>
-    <div itemprop='logo' itemscope='itemscope' itemtype='https://schema.org/ImageObject'>
-      <img itemprop="url"  src='{{site.url}}/assets/gravatar.jpeg' />
-      <meta itemprop="height" content="512" />
-      <meta itemprop="width" content="512" />
+    <div class="related">
+      <h5>Keywords</h5>
+      <p class="meta">
+        {{ page.tags | array_to_sentence_string }}
+      </p>
     </div>
-    <div itemprop='name'>
-      {{site.author.name}}
+
+    <div class="report-bugs">
+      <h5>Find an issue?</h5>
+      Open a pull request against my blog
+      <a href='https://github.com/blimmer/benlimmer.com' target='_blank' rel="noopener">on GitHub</a>.
+    </div>
+
+    <div class="pagination justify-content-between">
+      {% if page.previous %}<span><a href={{page.previous.url}}>&lt; Previous Post</a></span>{% endif %}
+      {% if page.next %}<span><a href={{page.next.url}}>Next Post &gt;</a></span>{% endif %}
+    </div>
+
+    <div itemprop='publisher' itemscope='itemscope' itemtype='https://schema.org/Organization' style='display:none;'>
+      <div itemprop='logo' itemscope='itemscope' itemtype='https://schema.org/ImageObject'>
+        <img itemprop="url"  src='{{site.url}}/assets/gravatar.jpeg' />
+        <meta itemprop="height" content="512" />
+        <meta itemprop="width" content="512" />
+      </div>
+      <div itemprop='name'>
+        {{site.author.name}}
+      </div>
     </div>
   </div>
 </div>
