Fix busted mobile view

--- a/_includes/consulting/specialties_accordian.html
+++ b/_includes/consulting/specialties_accordian.html
@@ -1,7 +1,7 @@
 <section class="accordian">
   <details>
     <summary>
-      <h3>Developer Tooling and Experience</h3>
+      <h3>Developer Tooling &amp; Experience</h3>
     </summary>
     <ul>
       <li>Build and Deployment Pipelines</li>
