--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="row">
-  <div class="post col-8" itemscope itemType="http://schema.org/BlogPosting">
+  <div class="post col-xl-8" itemscope itemType="http://schema.org/BlogPosting">
     <meta itemprop="inLanguage" content="en-US"/>
     <h1 class="headline" itemprop="headline">{{ page.title }}</h1>
     <p class="meta">
