--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="row">
-  <div class="post col-8">
+  <div class="post col-xl-8">
     <h1>{{ page.title }}</h1>
     <article>
       {{ content }}
