Fix line break in availability accordian

--- a/_includes/consulting/availability_accordian.html
+++ b/_includes/consulting/availability_accordian.html
@@ -4,7 +4,7 @@
       <h3>2020 Availability</h3>
     </summary>
     <div class="row ml-2 mt-2">
-      <div class="col-2">January 2020</div>
+      <div class="col-1">January</div>
       <div class="col-1"></div>
       <div class="col">
         {% octicon x height: 24 %}
@@ -13,7 +13,7 @@
     </div>
 
     <div class="row ml-2">
-      <div class="col-2">February 2020</div>
+      <div class="col-1">February</div>
       <div class="col-1"></div>
       <div class="col">
         {% octicon check height: 24 %}
@@ -22,7 +22,7 @@
     </div>
 
     <div class="row ml-2">
-      <div class="col-2">March 2020</div>
+      <div class="col-1">March</div>
       <div class="col-1"></div>
       <div class="col">
         {% octicon check height:24 %}
@@ -31,7 +31,7 @@
     </div>
 
     <div class="row ml-2">
-      <div class="col-2">April 2020</div>
+      <div class="col-1">April</div>
       <div class="col-1"></div>
       <div class="col">
         {% octicon check height:24 %}
@@ -40,7 +40,7 @@
     </div>
 
     <div class="row ml-2">
-      <div class="col-2">May 2020</div>
+      <div class="col-1">May</div>
       <div class="col-1"></div>
       <div class="col">
         {% octicon check height:24 %}
@@ -49,7 +49,7 @@
     </div>
 
     <div class="row ml-2">
-      <div class="col-2">June 2020</div>
+      <div class="col-1">June</div>
       <div class="col-1"></div>
       <div class="col">
         {% octicon x height:24 %}
@@ -58,7 +58,7 @@
     </div>
 
     <div class="row ml-2">
-      <div class="col-2">July 2020</div>
+      <div class="col-1">July</div>
       <div class="col-1"></div>
       <div class="col">
         {% octicon x height:24 %}
