--- a/_includes/consulting/availability_accordian.html
+++ b/_includes/consulting/availability_accordian.html
@@ -6,63 +6,56 @@
     <div class="row ml-2 mt-2">
       <div class="col-1">January</div>
       <div class="col-1"></div>
-      <div class="col">
-        {% octicon x height: 24 %}
-        <span class="text-danger">No Availability</span>
+      <div class="col text-danger">
+        {% octicon x height: 24 %} No Availability
       </div>
     </div>
 
     <div class="row ml-2">
       <div class="col-1">February</div>
       <div class="col-1"></div>
-      <div class="col">
-        {% octicon check height: 24 %}
-        <span class="text-success">Available</span>
+      <div class="col text-success">
+        {% octicon check height: 24 %} Available
       </div>
     </div>
 
     <div class="row ml-2">
       <div class="col-1">March</div>
       <div class="col-1"></div>
-      <div class="col">
-        {% octicon check height:24 %}
-        <span class="text-success">Available</span>
+      <div class="col text-success">
+        {% octicon check height:24 %} Available
       </div>
     </div>
 
     <div class="row ml-2">
       <div class="col-1">April</div>
       <div class="col-1"></div>
-      <div class="col">
-        {% octicon check height:24 %}
-        <span class="text-success">Available</span>
+      <div class="col text-success">
+        {% octicon check height:24 %} Available
       </div>
     </div>
 
     <div class="row ml-2">
       <div class="col-1">May</div>
       <div class="col-1"></div>
-      <div class="col">
-        {% octicon check height:24 %}
-        <span class="text-success">Available</span>
+      <div class="col text-success">
+        {% octicon check height:24 %} Available
       </div>
     </div>
 
     <div class="row ml-2">
       <div class="col-1">June</div>
       <div class="col-1"></div>
-      <div class="col">
-        {% octicon x height:24 %}
-        <span class="text-danger">No Availability</span>
+      <div class="col text-danger">
+        {% octicon x height:24 %} No Availability
       </div>
     </div>
 
     <div class="row ml-2">
       <div class="col-1">July</div>
       <div class="col-1"></div>
-      <div class="col">
-        {% octicon x height:24 %}
-        <span class="text-danger">No Availability</span>
+      <div class="col text-danger">
+        {% octicon x height:24 %} No Availability
       </div>
     </div>
   </details>
