Link to talks portfolio section

--- a/_includes/consulting/specialties_accordian.html
+++ b/_includes/consulting/specialties_accordian.html
@@ -56,8 +56,8 @@
       <h3>Talks</h3>
     </summary>
     <p>
-      In addition to technical offerings, I have some customizable presentations that are perfect for lunch-and-learn or
-      workshop settings, covering topics such as:
+      In addition to technical offerings, I have several customizable presentations that are perfect for lunch-and-learn
+      or workshop settings, covering topics such as:
     </p>
     <ul>
       <li>Productivity Maximization</li>
@@ -65,5 +65,6 @@
       <li>Successfully Tech Leading a Project</li>
       <li>Pull Request Best-Practices and Etiquette</li>
     </ul>
+    <p>See sample talk content <a href="{{ site.base_url }}/portfolio#talks">here</a>.</p>
   </details>
 </section>
