Add fintech bullet in specializations

--- a/_includes/consulting/specialties_accordian.html
+++ b/_includes/consulting/specialties_accordian.html
@@ -53,6 +53,19 @@
 
   <details>
     <summary>
+      <h3>Fintech</h3>
+    </summary>
+    <ul>
+      <li>PCI Compliance</li>
+      <li>Credit and Debit Card Processing</li>
+      <li>ACH Processing</li>
+      <li>Gift Card Provisioning</li>
+      <li>Fraud Detection and Mitigation</li>
+    </ul>
+  </details>
+
+  <details>
+    <summary>
       <h3>Talks</h3>
     </summary>
     <p>
