--- a/_includes/consulting/contact_button.html
+++ b/_includes/consulting/contact_button.html
@@ -1,7 +1,7 @@
 <section>
   <div class="row mt-5 mb-5">
-    <div class="col-4"></div>
-    <div class="col">
+    <div class="col"></div>
+    <div class="col-sm-4 align-self-center">
       <button
         class="btn btn-info btn-block"
         onclick="location.href='mailto:hello@benlimmer.com?subject=Consulting%20Services';"
@@ -9,6 +9,6 @@
         Contact
       </button>
     </div>
-    <div class="col-4"></div>
+    <div class="col"></div>
   </div>
 </section>
