Make consulting button an anchor. To make it more obvious why a failure might be occurring

--- a/_includes/consulting/contact_button.html
+++ b/_includes/consulting/contact_button.html
@@ -2,12 +2,14 @@
   <div class="row mt-5 mb-5">
     <div class="col"></div>
     <div class="col-sm-4 align-self-center">
-      <button
+      <a
+        role="button"
         class="btn btn-info btn-block"
-        onclick="location.href='mailto:hello@benlimmer.com?subject=Consulting%20Services';"
+        href="mailto:hello@benlimmer.com?subject=Consulting%20Services"
+        style="border: none;"
       >
         Contact
-      </button>
+      </a>
     </div>
     <div class="col"></div>
   </div>
