--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
       <div class="page-content">
         <div class="container">
-          {% if page.url != "/consulting/" %}
+          {% if page.url != "/consulting/" and page.url != "/consulting/contact/" %}
           <div class="alert alert-info mb-4" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
