--- a/_includes/consulting/contact_form.html
+++ b/_includes/consulting/contact_form.html
@@ -1,30 +1,37 @@
+<div class="col-8 mb-4">
+  Please fill out the form or, alternatively,
+  <a href="mailto:hello@benlimmer.com?subject=Consulting%20Services">send me an email</a>. I'm looking forward to
+  connecting with you!
+</div>
+
 <form id="contact-form">
-  <div class="form-group">
-    <label for="name-input">Your Name</label>
-    <input class="form-control" id="name-input" />
-  </div>
+  <div class="col-8">
+    <div class="form-group">
+      <label for="name-input">Your Name</label>
+      <input class="form-control" id="name-input" />
+    </div>
 
-  <div class="form-group">
-    <label for="email-input">Your Email Address</label>
-    <input type="email" class="form-control" id="email-input" aria-describedby="email-help" />
-    <small id="email-help" class="form-text text-muted">I'll never share your email with anyone else.</small>
-  </div>
+    <div class="form-group">
+      <label for="email-input">Your Email Address</label>
+      <input type="email" class="form-control" id="email-input" aria-describedby="email-help" />
+      <small id="email-help" class="form-text text-muted">I'll never share your email with anyone else.</small>
+    </div>
 
-  <div class="form-group">
-    <label for="message-input">Message</label>
-    <textarea class="form-control" id="message-input" rows="3" aria-describedby="message-help"></textarea>
-    <small id="message-help" class="form-text text-muted"
-      >Introduce yourself and share some information about your consulting needs.</small
-    >
+    <div class="form-group">
+      <label for="message-input">Message</label>
+      <textarea class="form-control" id="message-input" rows="3" aria-describedby="message-help"></textarea>
+      <small id="message-help" class="form-text text-muted"
+        >Introduce yourself and share some information about your consulting needs.</small
+      >
+    </div>
+    <button type="submit" class="btn btn-info">Submit</button>
   </div>
-
-  <button type="submit" class="btn btn-info">Submit</button>
 </form>
 
 <div class="alert-gutter mt-5">
   <div class="alert alert-danger collapse" role="alert" id="contact-error">
-    There was an error submitting the form. Please try again. If you experience another failure, please email me at
-    hello@benlimmer.com.
+    There was an error submitting the form. Please try again. If you experience another failure, please email me using
+    the link above.
   </div>
   <div class="alert alert-success collapse" role="alert" id="contact-success">
     Thank you! I'll be touch with you in 1-3 business days.
