Mark all fields as required

--- a/_includes/consulting/contact_form.html
+++ b/_includes/consulting/contact_form.html
@@ -8,18 +8,18 @@
   <div class="col-8">
     <div class="form-group">
       <label for="name-input">Your Name</label>
-      <input class="form-control" id="name-input" />
+      <input class="form-control" id="name-input" required />
     </div>
 
     <div class="form-group">
       <label for="email-input">Your Email Address</label>
-      <input type="email" class="form-control" id="email-input" aria-describedby="email-help" />
+      <input type="email" class="form-control" id="email-input" aria-describedby="email-help" required />
       <small id="email-help" class="form-text text-muted">I'll never share your email with anyone else.</small>
     </div>
 
     <div class="form-group">
       <label for="message-input">Message</label>
-      <textarea class="form-control" id="message-input" rows="3" aria-describedby="message-help"></textarea>
+      <textarea class="form-control" id="message-input" rows="3" aria-describedby="message-help" required></textarea>
       <small id="message-help" class="form-text text-muted"
         >Introduce yourself and share some information about your consulting needs.</small
       >
