--- a/_includes/consulting/contact_button.html
+++ b/_includes/consulting/contact_button.html
@@ -2,12 +2,7 @@
   <div class="row mt-5 mb-5">
     <div class="col"></div>
     <div class="col-sm-4 align-self-center">
-      <a
-        role="button"
-        class="btn btn-info btn-block"
-        href="mailto:hello@benlimmer.com?subject=Consulting%20Services"
-        style="border: none;"
-      >
+      <a role="button" class="btn btn-info btn-block" href="/consulting/contact/" style="border: none;">
         Contact
       </a>
     </div>
