--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,16 +8,7 @@
 
       <div class="page-content">
         <div class="container">
-          {% if page.url != "/consulting/" and page.url != "/consulting/contact/" %}
-          <div class="alert alert-info mb-4" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-            <h2 class="alert-heading">Consulting</h2>
-            I'm currently accepting new contracts for 2020. Find out more
-            <a class="alert-link" href="/consulting">here</a>.
-          </div>
-          {% endif %} {{ content }}
+          {{ content }}
         </div>
       </div>
 
