--- a/_includes/consulting/availability_accordian.html
+++ b/_includes/consulting/availability_accordian.html
@@ -14,32 +14,32 @@
     <div class="row ml-2">
       <div class="col-2">February</div>
       <div class="col-1"></div>
-      <div class="col text-success">
-        {% octicon check height: 24 %} Available
+      <div class="col text-danger">
+        {% octicon x height: 24 %} No Availability
       </div>
     </div>
 
     <div class="row ml-2">
       <div class="col-2">March</div>
       <div class="col-1"></div>
-      <div class="col text-success">
-        {% octicon check height:24 %} Available
+      <div class="col text-danger">
+        {% octicon x height: 24 %} No Availability
       </div>
     </div>
 
     <div class="row ml-2">
       <div class="col-2">April</div>
       <div class="col-1"></div>
-      <div class="col text-success">
-        {% octicon check height:24 %} Available
+      <div class="col text-danger">
+        {% octicon x height: 24 %} No Availability
       </div>
     </div>
 
     <div class="row ml-2">
       <div class="col-2">May</div>
       <div class="col-1"></div>
-      <div class="col text-success">
-        {% octicon check height:24 %} Available
+      <div class="col text-warning">
+        {% octicon alert height:24 %} Some Availability
       </div>
     </div>
 
@@ -56,6 +56,22 @@
       <div class="col-1"></div>
       <div class="col text-danger">
         {% octicon x height:24 %} No Availability
+      </div>
+    </div>
+
+    <div class="row ml-2">
+      <div class="col-2">August</div>
+      <div class="col-1"></div>
+      <div class="col text-success">
+        {% octicon check height:24 %} Available
+      </div>
+    </div>
+
+    <div class="row ml-2">
+      <div class="col-2">September</div>
+      <div class="col-1"></div>
+      <div class="col text-success">
+        {% octicon check height:24 %} Available
       </div>
     </div>
   </details>
