--- a/_includes/consulting/availability_accordian.html
+++ b/_includes/consulting/availability_accordian.html
@@ -38,24 +38,24 @@
     <div class="row ml-2">
       <div class="col-2">May</div>
       <div class="col-1"></div>
-      <div class="col text-warning">
-        {% octicon alert height:24 %} Some Availability
+      <div class="col text-success">
+        {% octicon check height:24 %} Some Availability
       </div>
     </div>
 
     <div class="row ml-2">
       <div class="col-2">June</div>
       <div class="col-1"></div>
-      <div class="col text-danger">
-        {% octicon x height:24 %} No Availability
+      <div class="col text-success">
+        {% octicon check height:24 %} Some Availability
       </div>
     </div>
 
     <div class="row ml-2">
       <div class="col-2">July</div>
       <div class="col-1"></div>
-      <div class="col text-danger">
-        {% octicon x height:24 %} No Availability
+      <div class="col text-success">
+        {% octicon check height:24 %} Some Availability
       </div>
     </div>
 
