--- a/_includes/consulting/availability_accordian.html
+++ b/_includes/consulting/availability_accordian.html
@@ -39,7 +39,7 @@
       <div class="col-2">May</div>
       <div class="col-1"></div>
       <div class="col text-success">
-        {% octicon check height:24 %} Some Availability
+        {% octicon x height: 24 %} No Availability
       </div>
     </div>
 
