Correct availability color

--- a/_includes/consulting/availability_accordian.html
+++ b/_includes/consulting/availability_accordian.html
@@ -38,7 +38,7 @@
     <div class="row ml-2">
       <div class="col-2">May</div>
       <div class="col-1"></div>
-      <div class="col text-success">
+      <div class="col text-danger">
         {% octicon x height: 24 %} No Availability
       </div>
     </div>
