--- a/_includes/head.html
+++ b/_includes/head.html
@@ -69,19 +69,19 @@
   <link type="text/plain" rel="author" href="{{ site.base_url }}/humans.txt" />
   <link rel="shortcut icon" href="/assets/favicon.png" />
   <link
-    href="//stackpath.bootstrapcdn.com/bootswatch/4.4.1/journal/bootstrap.min.css"
+    href="//stackpath.bootstrapcdn.com/bootswatch/4.5.0/journal/bootstrap.min.css"
     rel="stylesheet"
-    integrity="sha384-0d2eTc91EqtDkt3Y50+J9rW3tCXJWw6/lDgf1QNHLlV0fadTyvcA120WPsSOlwga"
+    integrity="sha384-vjBZc/DqIqR687k5rf6bUQ6IVSOxQUi9TcwtvULstA7+YGi//g3oT2qkh8W1Drx9"
     crossorigin="anonymous"
   />
   <link rel="stylesheet" href="{{ site.base_url }}/{% ministamp _css/custom.css css/custom.css %}" />
   <script src="{{ site.base_url }}/{% ministamp _js/require.js js/require.js %}"></script>
   <script>
-    (function(i, s, o, g, r, a, m) {
+    (function (i, s, o, g, r, a, m) {
       i["GoogleAnalyticsObject"] = r;
       (i[r] =
         i[r] ||
-        function() {
+        function () {
           (i[r].q = i[r].q || []).push(arguments);
         }),
         (i[r].l = 1 * new Date());
@@ -101,9 +101,9 @@
         bootstrap: { deps: ["jquery"] }
       },
       paths: {
-        jquery: "//code.jquery.com/jquery-3.4.1.slim.min",
-        bootstrap: "//stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min",
-        sentry: "https://browser.sentry-cdn.com/5.12.1/bundle.min"
+        jquery: "//code.jquery.com/jquery-3.5.1.slim.min",
+        bootstrap: "https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min",
+        sentry: "https://browser.sentry-cdn.com/5.17.0/bundle.min"
       }
     });
     require(["sentry"], function() {
