--- a/_includes/freelance/contact_form.html
+++ b/_includes/freelance/contact_form.html
@@ -1,6 +1,6 @@
 <div class="mb-4">
   Please fill out the form or, alternatively,
-  <a href="mailto:hello@benlimmer.com?subject=Consulting%20Services">send me an email</a>. I'm looking forward to
+  <a href="mailto:hello@benlimmer.com?subject=Freelance%20Services">send me an email</a>. I'm looking forward to
   connecting with you!
 </div>
 
@@ -20,7 +20,7 @@
     <label for="message-input">Message</label>
     <textarea class="form-control" id="message-input" rows="3" aria-describedby="message-help" required></textarea>
     <small id="message-help" class="form-text text-muted"
-      >Introduce yourself and share some information about your consulting needs.</small
+      >Introduce yourself and share some information about your needs.</small
     >
   </div>
   <button type="submit" class="btn btn-info">Submit</button>
