--- a/_includes/freelance/contact_button.html
+++ b/_includes/freelance/contact_button.html
@@ -2,7 +2,7 @@
   <div class="row mt-5 mb-5">
     <div class="col"></div>
     <div class="col-sm-4 align-self-center">
-      <a role="button" class="btn btn-info btn-block" href="/consulting/contact/" style="border: none;">
+      <a role="button" class="btn btn-info btn-block" href="/freelance/contact/" style="border: none;">
         Contact
       </a>
     </div>
