--- a/_includes/head.html
+++ b/_includes/head.html
@@ -76,24 +76,15 @@
   />
   <link rel="stylesheet" href="{{ site.base_url }}/{% ministamp _css/custom.css css/custom.css %}" />
   <script src="{{ site.base_url }}/{% ministamp _js/require.js js/require.js %}"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-43746905-1"></script>
   <script>
-    (function (i, s, o, g, r, a, m) {
-      i["GoogleAnalyticsObject"] = r;
-      (i[r] =
-        i[r] ||
-        function () {
-          (i[r].q = i[r].q || []).push(arguments);
-        }),
-        (i[r].l = 1 * new Date());
-      (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m);
-    })(window, document, "script", "//www.google-analytics.com/analytics.js", "ga");
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-    ga("create", "UA-43746905-1", "benlimmer.com");
-    ga("require", "displayfeatures");
-    ga("send", "pageview");
+    gtag("config", "UA-43746905-1");
   </script>
   <script>
     requirejs.config({
