--- a/_includes/head.html
+++ b/_includes/head.html
@@ -67,7 +67,9 @@
   <link rel="canonical" href="{{ site.production_url }}{{ page.url | replace:'index.html',''}}" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.production_url }}/feed.xml" />
   <link type="text/plain" rel="author" href="{{ site.base_url }}/humans.txt" />
-  <link rel="shortcut icon" href="/assets/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
   <link
     href="//stackpath.bootstrapcdn.com/bootswatch/4.5.0/journal/bootstrap.min.css"
     rel="stylesheet"
