fix a few lighthouse issues

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,10 +7,10 @@
       <span itemprop="email"><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></span>
     </div>
     <div class="contact col-md-3 align-items-start mb-2 mt-2">
-      <div class="mb-1">
+      <div class="mb-2">
         <a href="https://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a>
       </div>
-      <div class="mb-1">
+      <div class="mb-2">
         <a href="https://www.linkedin.com/in/blimmer/">linkedin.com/in/blimmer</a>
       </div>
       <div>
@@ -21,7 +21,7 @@
       <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
         <img
           alt="Creative Commons License"
-          style="padding-right: 10px;"
+          style="padding-right: 10px"
           src="https://i.creativecommons.org/l/by/4.0/88x31.png"
         />
       </a>
