perf: explicit specify footer img size

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
       <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
         <img
           alt="Creative Commons License"
-          style="padding-right: 10px"
+          style="padding-right: 10px; width: 88px; height: 31px"
           src="https://i.creativecommons.org/l/by/4.0/88x31.png"
         />
       </a>
