fix: update meta reference to gravatar

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@ layout: default
 
     <div itemprop='publisher' itemscope='itemscope' itemtype='https://schema.org/Organization' style='display:none;'>
       <div itemprop='logo' itemscope='itemscope' itemtype='https://schema.org/ImageObject'>
-        <img itemprop="url"  src='{{site.url}}/assets/gravatar.jpeg' />
+        <img itemprop="url"  src='{{site.base_url}}/{% ministamp _images/gravatar.jpeg assets/images/gravatar.jpeg %}' />
         <meta itemprop="height" content="512" />
         <meta itemprop="width" content="512" />
       </div>
