perf: host and cache creative commons logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
         <img
           alt="Creative Commons License"
           style="padding-right: 10px; width: 88px; height: 31px"
-          src="https://i.creativecommons.org/l/by/4.0/88x31.png"
+          src="{{ site.base_url }}/{% ministamp _images/creative-commons-icon.png assets/images/creative-commons-icon.png %}"
         />
       </a>
     </div>
