chore: more descriptive link text

--- a/_includes/freelance/specialties_accordian.html
+++ b/_includes/freelance/specialties_accordian.html
@@ -78,6 +78,6 @@
       <li>Successfully Tech Leading a Project</li>
       <li>Pull Request Best-Practices and Etiquette</li>
     </ul>
-    <p>See sample talk content <a href="{{ site.base_url }}/portfolio#talks">here</a>.</p>
+    <p>See <a href="{{ site.base_url }}/portfolio#talks">sample talk content</a>.</p>
   </details>
 </section>
