feat: update freelance page

--- a/_includes/freelance/specialties_accordian.html
+++ b/_includes/freelance/specialties_accordian.html
@@ -4,9 +4,9 @@
       <h3>Developer Tooling &amp; Experience</h3>
     </summary>
     <ul>
-      <li>Build and Deployment Pipelines</li>
+      <li>Continuous Integration and Delivery</li>
       <li>Microservice Generation and Tooling</li>
-      <li>Infrastructure as Code</li>
+      <li>Infrastructure as Code, especially AWS Cloud Development Kit (aws-cdk)</li>
       <li>Observability and Metrics</li>
       <li>Static Analysis and Linting</li>
     </ul>
@@ -21,6 +21,7 @@
       <li>Cost Optimization</li>
       <li>Serverless</li>
       <li>Event-Driven Architectures</li>
+      <li>AWS Training</li>
     </ul>
   </details>
 
@@ -48,19 +49,6 @@
       <li>GraphQL</li>
       <li>SQL and NoSQL Databases</li>
       <li>Automated Testing</li>
-    </ul>
-  </details>
-
-  <details>
-    <summary>
-      <h3>Fintech</h3>
-    </summary>
-    <ul>
-      <li>PCI Compliance</li>
-      <li>Credit and Debit Card Processing</li>
-      <li>ACH Processing</li>
-      <li>Gift Card Provisioning</li>
-      <li>Fraud Detection and Mitigation</li>
     </ul>
   </details>
 
