fix: creative commons footer AR

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
       <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
         <img
           alt="Creative Commons License"
-          style="padding-right: 10px; width: 88px; height: 31px"
+          style="padding-right: 10px"
           src="{{ site.base_url }}/{% ministamp _images/creative-commons-icon.png assets/images/creative-commons-icon.png %}"
         />
       </a>
