--- a/_includes/head.html
+++ b/_includes/head.html
@@ -77,6 +77,26 @@
     crossorigin="anonymous"
   />
   <link rel="stylesheet" href="{{ site.base_url }}/{% ministamp _css/custom.css css/custom.css %}" />
+  <script src="{{ site.base_url }}/{% ministamp _js/require.js js/require.js %}"></script>
+  <script>
+    requirejs.config({
+      shim: {
+        bootstrap: { deps: ["jquery"] }
+      },
+      paths: {
+        jquery: "//code.jquery.com/jquery-3.5.1.slim.min",
+        bootstrap: "https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min"
+      }
+    });
+    require(["jquery", "bootstrap"], function() {
+      // Dependencies loaded
+      {% if page.custom_js %}
+        {% include {{page.custom_js}} %}
+      {% endif %}
+    });
+  </script>
+
+  {% if jekyll.environment == "production" %}
   <script>
     (function (n, i, v, r, s, c, x, z) {
       x = window.AwsRumClient = { q: [], n: n, i: i, v: v, r: r, c: c };
@@ -104,7 +124,7 @@
       }
     );
   </script>
-  <script src="{{ site.base_url }}/{% ministamp _js/require.js js/require.js %}"></script>
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-43746905-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -115,21 +135,5 @@
 
     gtag("config", "UA-43746905-1");
   </script>
-  <script>
-    requirejs.config({
-      shim: {
-        bootstrap: { deps: ["jquery"] }
-      },
-      paths: {
-        jquery: "//code.jquery.com/jquery-3.5.1.slim.min",
-        bootstrap: "https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min"
-      }
-    });
-    require(["jquery", "bootstrap"], function() {
-      // Dependencies loaded
-      {% if page.custom_js %}
-        {% include {{page.custom_js}} %}
-      {% endif %}
-    });
-  </script>
+  {% endif %}
 </head>
