feat: improve tags page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: default
     <div class="related">
       <h5>Keywords</h5>
       <p class="meta">
-        {{ page.tags | array_to_sentence_string }}
+        <a href="/tags">{{ page.tags | array_to_sentence_string }}</a>
       </p>
     </div>
 
