--- a/_css/custom.css
+++ b/_css/custom.css
@@ -200,6 +200,23 @@ footer hr {
   display: inline-block;
 }
 
+.tag-list {
+  background-color: white;
+  border: none;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+
+.tag-list a {
+  background-color: #eee;
+  border: 1px solid gray;
+  flex-grow: 0.01;
+  margin: 1% 2% 1% 0;
+  padding: 0.25em 0.75em 0.25em 0.55em;
+  text-decoration: none;
+}
+
 /* Reset highlight plain text color */
 .highlight {
   color: #d0d0d0;
