chore: upgrade CWR

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -106,13 +106,13 @@
       z = document.createElement("script");
       z.async = true;
       z.src = s;
-      document.head.insertBefore(z, document.getElementsByTagName("script")[0]);
+      document.head.insertBefore(z, document.head.getElementsByTagName("script")[0]);
     })(
       "cwr",
       "eb25f266-0a94-42b7-af0d-7372f6a4ee0e",
       "1.0.0",
       "us-east-1",
-      "https://client.rum.us-east-1.amazonaws.com/1.0.2/cwr.js",
+      "https://client.rum.us-east-1.amazonaws.com/1.1.0/cwr.js",
       {
         sessionSampleRate: 1,
         guestRoleArn: "arn:aws:iam::107111673154:role/benlimmer.com-RUM-UnauthenticatedRole",
