fix: update cwr.js after cdk changes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -109,16 +109,16 @@
       document.head.insertBefore(z, document.head.getElementsByTagName("script")[0]);
     })(
       "cwr",
-      "eb25f266-0a94-42b7-af0d-7372f6a4ee0e",
+      "2bf5df89-7706-4d4f-8f32-a91dfea63005",
       "1.0.0",
       "us-east-1",
-      "https://client.rum.us-east-1.amazonaws.com/1.1.0/cwr.js",
+      "https://client.rum.us-east-1.amazonaws.com/1.2.1/cwr.js",
       {
         sessionSampleRate: 1,
         guestRoleArn: "arn:aws:iam::107111673154:role/benlimmer.com-RUM-UnauthenticatedRole",
-        identityPoolId: "us-east-1:452f1f73-40e4-44bc-b326-b56daf4d20e4",
+        identityPoolId: "us-east-1:bb7e5a27-edcf-4907-8802-81d6f217da59",
         endpoint: "https://dataplane.rum.us-east-1.amazonaws.com",
-        telemetries: ["performance", "errors", "http"],
+        telemetries: ["errors", "performance", "http"],
         allowCookies: true,
         enableXRay: false,
       }
