feat: initial site

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,15 @@
 ---
-
+import Layout from "src/layouts/Layout.astro";
+import HeroSection from "src/components/homepage/HeroSection.astro";
+import BlogPostsSection from "src/components/homepage/BlogPostsSection.astro";
+import ContactSection from "src/components/homepage/ContactSection.astro";
+import Footer from "src/components/Footer.astro";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
-  </head>
-  <body>
-    <h1>Astro</h1>
-  </body>
-</html>
+<Layout
+  description="Ben Limmer is a freelance software engineer and architect based in Denver, Colorado. He specializes in improving developer experience and productivity."
+>
+  <HeroSection />
+  <BlogPostsSection />
+  <ContactSection />
+</Layout>
